# pathbuddy

./: .gitignore  CLAUDE.md  README.md  components.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  steiger.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  main.yml
.planning/: .continue-here.md  HANDOFF.json  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RESUME-MILESTONE.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v2.1-MILESTONE-AUDIT.md
.planning/debug/: knowledge-base.md
.planning/debug/resolved/: combat-browser-filters-broken.md  zip-eocd-sync-failure.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.0.0-REQUIREMENTS.md  v1.0.0-ROADMAP.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.5.0-ROADMAP.md  v1.6.0-MILESTONE-AUDIT.md  v1.6.0-ROADMAP.md  v1.7.0-ROADMAP.md  v2.0-MILESTONE-AUDIT.md  v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md
.planning/phases/01-cleanup-architecture/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-VERIFICATION.md
.planning/phases/02-reference-analysis/: 02-01-PLAN.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md  GAP-ANALYSIS.md
.planning/phases/03-conditions-statuses/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-RESEARCH.md  (+2 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/specs/: 2026-04-03-spell-slot-customization-design.md
LICENSES/: OGL-1.0a.txt  OGL-SECTION-15.md  PAIZO-COMMUNITY-USE.md  pf2-locale-ru-CONTRIBUTORS.md
engine/: index.ts  types.ts
engine/__tests__/: apply-tier.test.ts
engine/actions/: action-data.ts  action-outcomes.ts
engine/conditions/: condition-effects.ts  conditions.ts  death-progression.ts
engine/damage/: damage-helpers.ts  damage.ts  iwr-utils.ts  iwr.ts
engine/degree-of-success/: degree-of-success.ts
engine/dice/: dice.ts
engine/effects/: base-speed.ts  battle-form-types.ts  battle-form.ts  fortune.ts  predicate-context.ts  spell-effect-modifiers.ts
engine/encounter/: apply-tier.ts  weak-elite.ts  xp.ts
engine/modifiers/: modifiers.ts
engine/pc/: hp.ts  math.ts  skills.ts  types.ts
engine/statistics/: compute-stat-modifiers.ts  selector-resolver.ts
refs/uuid-redirects/: pf2e.json
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  sync.rs
src/app/: SplashScreen.tsx  providers.tsx  router.tsx
src/lib/: weak-elite.ts
(+815 files in other folders)
