[package]
name = "pathmaid"
version = "1.2.1"
description = "Pathfinder 2e DM Assistant"
authors = ["you"]
edition = "2021"

[lib]
name = "pathmaid_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
zip = "2"
tokio = { version = "1", features = ["fs"] }
tempfile = "3"
