[package]
name = "pathmaid"
version = "1.5.3"
description = "Pathfinder 2e DM Assistant"
authors = ["you"]
edition = "2021"

[lib]
name = "pathmaid_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# PF2e pack archives are plain deflate — drop bzip2/lzma/zstd default
# features so we don't need MSVC C compiler (cl.exe) on Windows dev boxes.
zip = { version = "2", default-features = false, features = ["deflate"] }
tokio = { version = "1", features = ["fs"] }
tempfile = "3"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
